# genlister

./: README.md  pyproject.toml
.github/workflows/: validation.yml
cnv/moma/: gener.csv
scripts/validation/: core.py  validate.py
src/genlister/: validate.py
